Fixes z-index.

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -33,6 +33,7 @@
 	padding: 1rem 2rem;
 	border-radius: 1rem;
 	color: white;
+	z-index: 1;
 
 	&.opaque {
 		background: $primary-colour;
